--- a/css/index.css
+++ b/css/index.css
@@ -142,7 +142,7 @@ h2 {
   font-size: 6.0em;
   color: #FF9800;
   text-align: center;
-  margin-bottom: 1.6em;
+  margin: 0.6em 0 1.1em;
 }
 h2.small {
   font-size: 3.0em;
