--- a/css/progress-bar.css
+++ b/css/progress-bar.css
@@ -15,6 +15,11 @@ css/progress-bar.css
   .progress-bar { margin: 0.5em; }
 }
 
+.progress-bar.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .progress-bar .progress {
   background-color: #5DADE8;
   border-radius: 4px;
