--- a/css/index.css
+++ b/css/index.css
@@ -224,18 +224,20 @@ img.avatar {
   }
 }
 p {
-  font-size: 1.2em;
+  font-size: 1.1em;
   font-weight: 300;
   padding: 2.0em 16px 0.4em;
   margin: 0;
 }
-p::first-letter {
+#about p::first-letter {
+  font-family: monospace;
   font-size: 2.0em;
   line-height: 0;
 }
 
 p strong {
-  font-size: 1.4em;
+  font-family: monospace;
+  font-size: 1.2em;
   font-weight: 300;
 }
 
