--- a/css/layout.css
+++ b/css/layout.css
@@ -95,8 +95,7 @@ ul > li h3 {
   margin-bottom: 0;
 }
 ul > li p { padding: 1.0em 0; }
-
-table[href] { cursor: pointer; }
+ul > li > a { color: inherit; }
 
 .vertical-dots {
   border-left: 5px #D0D0D0 dotted;
