Changed units to rem, improved typography, about section and footer.

--- a/css/typography.css
+++ b/css/typography.css
@@ -2,25 +2,33 @@
 css/typography.css
 */
 
+/** HEADERS */
+header table {
+  font-size: 5.0rem;
+  padding: 1.0em 0.5em 0.125em;
+  font-weight: 100;
+  color: #E0E0E0;
+}
+
 h1 {
   margin: 0;
-  line-height: 1.0em;
-  font-size: 10.8rem;
+  line-height: 0.7em;
+  font-size: 17.0rem;
   font-weight: 100;
   color: #EEEEEE;
 }
-h1 strong { font-weight: 300; color: #FFFFFF; }
 
 h2 {
-  font-weight: 300;
-  font-size: 6.0em;
-  color: #FAFAFA;
+  font-weight: 100;
+  font-size: 14.0rem;
+  color: #FFFFFF;
   margin: 0;
 }
 
 h3 {
-  font-weight: 300;
-  font-size: 3.0em;
+  font-family: "Roboto Slab", serif;
+  font-weight: 500;
+  font-size: 4.0rem;
   text-align: center;
   color: #424242;
   margin: 0.6em 0 1.6em;
@@ -28,31 +36,61 @@ h3 {
 }
 
 h4 {
-  font-size: 1.4em;
-  font-size: bold;
+  font-size: 2.0rem;
+  font-weight: 500;
   color: #424242;
   margin-bottom: 0.9em;
   text-align: center;
 }
 
-td > em {
+
+/** PARAGRAPHS */
+p {
+  font-size: 1.8rem;
+  font-weight: 300;
+  padding: 1.3em 0 0.2em;
+  margin: 0;
+  line-height: 1.4em;
+}
+big {
+  font-family: "Roboto Slab", serif;
+  font-size: 8.0rem;
+  font-weight: 100;
+  line-height: 1.0em;
+}
+strong {
+  font-family: "Roboto Slab", serif;
+  font-weight: bold;
+}
+em {
+  font-family: "Roboto Slab", serif;
   color: #616161;
   font-style: normal;
 }
 
-@media (max-width: 720px) {
-  h1 { font-size: 3.7rem; }
-  h2 { font-size: 4.0em; }
-  #title table {
-    font-size: 1.5rem;
+a { text-decoration: none; }
+a:hover { text-decoration: underline; }
+
+@media (max-width: 767px) {
+  h1 { font-size: 6.0rem; }
+  h2 { font-size: 5.0rem; }
+  header table {
+    font-size: 2.0rem;
+    padding: 0.8rem 1.0rem;
+  }
+
+  big { font-size: 7.0rem; }
+}
+@media (min-width: 768px) and (max-width: 959px) {
+  h1 { font-size: 14.0rem; }
+  h2 { font-size: 12.0rem; }
+  header table {
+    font-size: 4.5rem;
     padding: 0.8rem 1.0rem;
   }
 }
-@media (min-width: 721px) and (max-width: 920px) {
-  h1 { font-size: 8.7rem; }
-  h2 { font-size: 5.0em; }
-  #title table {
-    font-size: 2.3rem;
-    padding: 0.8rem 1.0rem;
-  }
-}
+
+/** TEXT CLASSES */
+.text-center { text-align: center; }
+.text-light { font-weight: 300; }
+.text-white { color: white; }
