--- a/css/layout.css
+++ b/css/layout.css
@@ -5,8 +5,10 @@ css/layout.css
 html,
 body {
   font-family: "Roboto", "Open Sans", Arial, sans-serif;
-  font-size: 15px;
+  font-size: 62.5%;
   font-weight: 300;
+
+  color: #424242;
 
   margin: 0;
   padding: 0;
@@ -22,39 +24,55 @@ body {
   bottom: 0;
 }
 .container {
-  padding: 5.0em 0;
-  max-width: 720px;
+  padding: 5.0rem 0;
+  max-width: 80rem;
 }
-.container.small { width: 480px; }
+.container.small {
+  width: 45rem;
+}
 .center {
   margin-left: auto;
   margin-right: auto;
 }
-.fit { width: 100%; }
-@media (max-width: 480px) {
-  .container { width: 100%; }
-  .container.small { width: 100%; }
+.fit {
+  width: 100% !important;
 }
-@media (max-width: 720px) {
-  .container { padding: 2.0em 0; width: 100%; }
-  .container.small { width: 100%; }
+.row:before,
+.row:after {
+    content: " ";
+    display: table;
+}
+.row:after { clear: both; }
+.column-50 { width: 50%; }
+
+.row, 
+.column { box-sizing: border-box; }
+.column {
+  padding: 2.0rem 2.0rem 1.0rem;
+}
+
+.pull-left {
+  display: block;
+  float: left;
+}
+.pull-right {
+  display: block;
+  float: right;
+}
+
+.show-on-mobile { display: none !important; }
+
+@media (max-width: 719px) {
+  .column-50 {
+    width: 100%;
+    padding-top: 0;
+  }
+  .show-on-mobile { display: inherit !important; }
+  .hide-on-mobile { display: none !important; }
 }
 
 
 /* ID ELEMENTS */
-#wrapper {
-  height: 100%;
-}
-
-#title {
-  font-weight: 100;
-}
-#title table {
-  padding: 2.0rem 3.0rem;
-  font-size: 2.3rem;
-  color: #E0E0E0;
-}
-
 #skills > .container > div {
   margin-bottom: 3.3em;
   width: 300px;
@@ -79,7 +97,7 @@ body {
 
 
 /* LIST */
-ul { padding: 1.0em; }
+ul { padding: 0 1.0em; margin: 0; }
 ul > li {
   list-style: none;
   margin: 20px 0;
@@ -137,136 +155,62 @@ header {
 }
 
 
-/* NAV */
-nav {
-  background-color: #FFFFFF;
-  position: fixed;
-  font-weight: 100;
-  width: 100%;
-  height: 64px;
-  clear: both;
-  z-index: 1;
-}
-nav ul {
-  width: 100%;
-  list-style: none;
-  padding: 16px 0;
-  margin: 0;
-  text-align: right;
-}
-nav ul li {
-  font-size: 1.4rem;
-  display: inline;
-  padding: 0 1.1em;
-}
-nav ul li a > svg {
-  fill: currentColor;
-  display: none;
-  width: 32px;
-  height: 32px;
-}
-nav ul li a {
-  border-radius: 4px;
-  color: #212121;
-  text-decoration: none;
-}
-nav ul li a:hover { color: #F5F5F5; }
-nav ul li a.selected { color: #FFFFFF; }
-@media (max-width: 720px) {
-  nav { height: 56px; }
-  nav ul {
-    width: 100%;
-    text-align: center;
-    float: none;
-    clear: both;
-    display: table;
-  }
-  nav ul li { padding: 0 0.7em; }
-  nav ul li a > span { display: none; }
-  nav ul li a > svg {
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-  }
-}
-
-
 /* SECTION */
 section {
-  background-color: #FAFAFA;
-  text-align: justify;
+  font-size: 1.618033989rem;
+  background-color: #FFFFFF;
+  text-align: left;
   /*min-height: 100%;*/
   padding-bottom: 4.0em;
 }
-section > div.title {
+section > .title {
   background-position: center bottom;
   background-attachment: fixed;
   background-size: cover;
   text-align: center;
-  padding: 160px 0;
+  padding: 16.0rem 0;
   width: 100%;
 }
 @media (max-width: 720px) {
-  section > div.title { padding: 100px 0; }
+  section > .title { padding: 100px 0; }
 }
 
 
 /* ABOUT */
-img.avatar {
-  margin: 32px 32px 16px 16px;
-  border-radius: 100px;
-  width: 200px;
-  height: 200px;
-  float: left;
+#about #column-1 {
+  background-image: url(../img/brush-stroke.png);
+  background-position: bottom left;
+  background-size: 20.0rem;
+  background-repeat: no-repeat no-repeat;
 }
-@media (max-width: 480px) {
-  img.avatar {
-    border-radius: 50px;
-    width: 100px;
-    height: 100px;
-  }
-}
-p {
-  font-size: 1.1em;
-  font-weight: 300;
-  padding: 2.0em 16px 0.4em;
-  margin: 0;
-}
-#about p::first-letter {
-  font-family: monospace;
-  font-size: 2.0em;
-  line-height: 0;
-}
-
-p strong {
-  font-family: monospace;
-  font-size: 1.2em;
-  font-weight: 300;
+.avatar {
+  border-radius: 50%;
+  width: 30.0rem;
+  height: 30.0rem;
+  display: block;
 }
 
 
 /* FOOTER */
 footer {
   position: relative;
-  background: #BDBDBD;
+  background: #E0E0E0;
+  color: #9E9E9E;
+  font-size: 1.8rem;
   padding: 32px 0 0;
   width: 100%;
-  height: 150px;
+  height: 200px;
 }
 footer td { padding: 1.0em 2.0em 0; }
-footer a { color: #9E9E9E; }
-footer a:hover { color: #757575; }
-footer small {
-  color: #9E9E9E;
-}
+footer a { color: #BDBDBD; }
+footer a:hover { color: #9E9E9E; }
 footer svg {
   fill: currentColor;
   display: inline-block;
-  width: 48px;
-  height: 48px;
+  width: 8.0rem;
+  height: 8.0rem;
 }
+
 @media (max-width: 480px) {
-  footer { height: 100px; }
   footer td { padding: 1.0em 0.3em 0; }
-  footer svg { width: 32px; height: 32px; }
 }
