--- a/css/typography.css
+++ b/css/typography.css
@@ -19,8 +19,8 @@ h1 {
 }
 
 h2 {
-  font-weight: 100;
   font-size: 14.0rem;
+  font-weight: 100;
   color: #FFFFFF;
   margin: 0;
 }
@@ -41,6 +41,26 @@ h4 {
   color: #424242;
   margin-bottom: 0.9em;
   text-align: center;
+}
+
+@media (max-width: 767px) {
+  h1 { font-size: 6.0rem; }
+  h2 {
+    font-size: 5.0rem;
+    font-weight: 300;
+  }
+  header table {
+    font-size: 2.0rem;
+    padding: 0.8rem 1.0rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 959px) {
+  h1 { font-size: 14.0rem; }
+  h2 { font-size: 12.0rem; }
+  header table {
+    font-size: 4.5rem;
+    padding: 0.8rem 1.0rem;
+  }
 }
 
 
@@ -72,23 +92,10 @@ a { text-decoration: none; }
 a:hover { text-decoration: underline; }
 
 @media (max-width: 767px) {
-  h1 { font-size: 6.0rem; }
-  h2 { font-size: 5.0rem; }
-  header table {
-    font-size: 2.0rem;
-    padding: 0.8rem 1.0rem;
-  }
-
   big { font-size: 7.0rem; }
+  em { font-weight: normal; }
 }
-@media (min-width: 768px) and (max-width: 959px) {
-  h1 { font-size: 14.0rem; }
-  h2 { font-size: 12.0rem; }
-  header table {
-    font-size: 4.5rem;
-    padding: 0.8rem 1.0rem;
-  }
-}
+
 
 /** TEXT CLASSES */
 .text-center { text-align: center; }
