--- a/css/layout.css
+++ b/css/layout.css
@@ -89,7 +89,7 @@ body {
 #portfolio ul > li {
   text-align: left;
   display: inline-block;
-  width: 320px;
+  width: 38rem;
   vertical-align: middle;
 }
 #portfolio ul > li .round { width: 100px; height: 100px; }
@@ -193,16 +193,17 @@ section > .title {
 /* FOOTER */
 footer {
   position: relative;
-  background: #E0E0E0;
-  color: #9E9E9E;
-  font-size: 1.6rem;
+  background: #F5F5F5;
+  color: #BDBDBD;
+  font-family: "Roboto Slab", serif;
+  font-size: 1.4rem;
   padding: 32px 0 0;
   width: 100%;
   height: 180px;
 }
 footer td { padding: 1.0em 2.0em 0; }
-footer a { color: #BDBDBD; }
-footer a:hover { color: #9E9E9E; }
+footer a { color: #D7D7D7; }
+footer a:hover { color: #BDBDBD; }
 footer svg {
   fill: currentColor;
   display: inline-block;
