--- a/css/typography.css
+++ b/css/typography.css
@@ -2,107 +2,46 @@
 css/typography.css
 */
 
+html,
+body {
+  font-family: Vollkorn, Georgia, 'Times New Roman', serif;
+  font-size: 62.5%;
+  font-weight: 400;
+  color: #212121;
+}
+
 /** HEADERS */
-header table {
-  font-size: 5.0rem;
-  padding: 1.0em 0.5em 0.125em;
-  font-weight: 100;
-  color: #E0E0E0;
-}
-
 h1 {
-  margin: 0;
-  line-height: 0.7em;
-  font-size: 17.0rem;
-  font-weight: 100;
-  color: #EEEEEE;
-}
-
-h2 {
-  font-size: 14.0rem;
-  font-weight: 100;
-  color: #FFFFFF;
-  margin: 0;
-}
-
-h3 {
-  font-family: "Roboto Slab", serif;
-  font-weight: 500;
-  font-size: 4.0rem;
-  text-align: center;
-  color: #424242;
-  margin: 0.6em 0 1.6em;
-  width: 100%;
+  font-size: 3.0rem;
+  font-weight: 700;
+  line-height: 1.6;
+  margin: 0 0 0.6rem;
+  /* margin: 0;*/
 }
 
 h4 {
-  font-size: 2.0rem;
-  font-weight: 500;
-  color: #424242;
-  margin-bottom: 0.9em;
-  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 1.0;
+  margin: 0;
 }
 
 /** phone */
 @media (max-width: 767px) {
-  h1 { font-size: 5.5rem; }
-  h2 {
-    font-size: 5.0rem;
-    font-weight: 300;
-  }
-  header table {
+  h1 {
     font-size: 2.0rem;
-    padding: 0.8rem 1.0rem;
+  }
+  h4 {
+    font-size: 1.1rem;
   }
 }
+
 /** tablet */
 @media (min-width: 768px) and (max-width: 959px) {
-  h1 { font-size: 14.0rem; }
-  h2 { font-size: 12.0rem; }
-  header table {
-    font-size: 4.5rem;
-    padding: 0.8rem 1.0rem;
+  h1 {
+    font-size: 2.5rem;
+  }
+  h4 {
+    font-size: 1.3rem;
   }
 }
-
-
-/** PARAGRAPHS */
-p {
-  font-size: 1.7rem;
-  font-weight: 300;
-  padding: 1.3em 0 0.2em;
-  margin: 0;
-  line-height: 1.4em;
-}
-big {
-  font-family: "Roboto Slab", serif;
-  font-size: 8.0rem;
-  font-weight: 100;
-  line-height: 1.0em;
-}
-strong {
-  font-family: "Roboto Slab", serif;
-  font-weight: bold;
-}
-em {
-  font-family: "Roboto Slab", serif;
-  color: #616161;
-  font-style: normal;
-}
-
-a { text-decoration: none; }
-a:hover h1,
-a:hover h2,
-a:hover h3,
-a:hover h4 { text-decoration: underline; }
-
-@media (max-width: 767px) {
-  big { font-size: 7.0rem; }
-  em { font-weight: normal; }
-}
-
-
-/** TEXT CLASSES */
-.text-center { text-align: center; }
-.text-light { font-weight: 300; }
-.text-white { color: white; }
