--- a/css/typography.css
+++ b/css/typography.css
@@ -2,24 +2,39 @@
 css/typography.css
 */
 
-html,
+html {
+  font-size: 62.5%;
+}
+
 body {
   font-family: Vollkorn, Georgia, 'Times New Roman', serif;
-  font-size: 62.5%;
+  font-size: 1.5em;
   font-weight: 400;
+  line-height: 1.6;
   color: #212121;
+}
+
+/** ANCHORS */
+a {
+  color: #F00;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #1A1A1A;
+  text-decoration: underline;
 }
 
 /** HEADERS */
 h1 {
-  font-size: 3.0rem;
-  font-weight: 700;
-  line-height: 1.6;
+  font-size: 3.6rem;
+  font-weight: 400;
+  line-height: 1.5;
   margin: 0 0 0.6rem;
 }
 
 h4 {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   font-weight: 400;
   line-height: 1.0;
   margin: 0;
