--- a/css/typography.css
+++ b/css/typography.css
@@ -25,12 +25,16 @@ a:hover {
   text-decoration: underline;
 }
 
+.flourish {
+  width: 24.0rem;
+}
+
 /** HEADERS */
 h1 {
-  font-size: 3.6rem;
+  font-size: 3.0rem;
   font-weight: 400;
-  line-height: 1.5;
-  margin: 0 0 0.6rem;
+  line-height: 1.7;
+  margin: 0 0 0.5rem;
 }
 
 h4 {
@@ -42,20 +46,29 @@ h4 {
 
 /** phone */
 @media (max-width: 767px) {
-  h1 {
-    font-size: 2.5rem;
-  }
-  h4 {
-    font-size: 1.27rem;
-  }
+  h1 { font-size: 2.5rem; }
+  h4 { font-size: 1.27rem; }
 }
 
 /** tablet */
 @media (min-width: 768px) and (max-width: 959px) {
-  h1 {
-    font-size: 2.8rem;
-  }
-  h4 {
-    font-size: 1.42rem;
-  }
+  h1 { font-size: 2.8rem; }
+  h4 { font-size: 1.42rem; }
+}
+
+/** NAV */
+nav {
+  font-family: 'Merriweather Sans', Helvetica, Arial, sans-serif;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+
+/** phone */
+@media (max-width: 767px) {
+  nav { font-size: 1.0rem; }
+}
+
+/** tablet */
+@media (min-width: 768px) and (max-width: 959px) {
+  nav { font-size: 1.1rem; }
 }
