--- a/css/typography.css
+++ b/css/typography.css
@@ -29,9 +29,10 @@ a:hover {
   width: 24.0rem;
 }
 
+
 /** HEADERS */
 h1 {
-  font-size: 3.0rem;
+  font-size: 3.4rem;
   font-weight: 400;
   line-height: 1.7;
   margin: 0 0 0.5rem;
@@ -44,17 +45,6 @@ h4 {
   margin: 0;
 }
 
-/** phone */
-@media (max-width: 767px) {
-  h1 { font-size: 2.5rem; }
-  h4 { font-size: 1.27rem; }
-}
-
-/** tablet */
-@media (min-width: 768px) and (max-width: 959px) {
-  h1 { font-size: 2.8rem; }
-  h4 { font-size: 1.42rem; }
-}
 
 /** NAV */
 nav {
@@ -63,12 +53,19 @@ nav {
   text-transform: uppercase;
 }
 
+
 /** phone */
 @media (max-width: 767px) {
-  nav { font-size: 1.0rem; }
+  h1 { font-size: 2.8rem; }
+  h4 { font-size: 1.27rem; }
+  nav { font-size: 0.9rem; }
+  .flourish { width: 20.0rem; }
 }
 
 /** tablet */
-@media (min-width: 768px) and (max-width: 959px) {
-  nav { font-size: 1.1rem; }
+@media (min-width: 768px) and (max-width: 1025px) {
+  h1 { font-size: 3.0rem; }
+  h4 { font-size: 1.42rem; }
+  nav { font-size: 1.0rem; }
+  .flourish { width: 22.0rem; }
 }
