--- a/css/layout.css
+++ b/css/layout.css
@@ -29,5 +29,11 @@ nav {
 }
 
 nav > a {
-  margin: 0 1.5rem;
+  margin: 0 1.2rem;
+}
+
+article {
+  margin-top: 3.6rem;
+  width: 80%;
+  max-width: 330px;
 }
